fixed overlapping and updated project video links

--- a/src/containers/app/App.css
+++ b/src/containers/app/App.css
@@ -58,7 +58,7 @@ Header Section Customizations
   margin-top: 0;
   margin-left: 0;
   height: 49vh;
-  padding-top: 60px;
+  padding-top: 50px;
 }
 
 .particles-js {
@@ -83,7 +83,7 @@ Header Section Customizations
   position: relative;
   margin-top: -183px;
   margin-left: 32px;
-  height: 100%
+  height: 45%
 }
 
 .header_text {
@@ -101,6 +101,7 @@ Header Section Customizations
   width: 90px;
   margin-top: 23px;
   margin-left: 86px;
+  z-index: 10;
 }
 
 #headerIcon {
